<resources>
    <string name="app_name">Password Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_keyboard">Keyboard</string>

    <string name="title_activity_welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="setup">Setup</string>

    <string name="slide_1_description">Remember one password to keep all others: credit card PINs, web &amp; email accounts, computer &amp; Wi-Fi passwords…</string>
    <string name="slide_2_description">Your passwords are protected with a 256-bit Advanced Encryption Standard (AES).</string>
    <string name="slide_3_description">Sync encrypted passwords to your favorite cloud service and restore them in case of a device change or loss</string>
    <string name="slide_4_description">Access your data on a computer with a free Windows/Mac app. Download it from www.safe-in-cloud.com.</string>

    <string name="database_setup">Database setup</string>
    <string name="create_new_database">Create a new database and set a password for it</string>
    <string name="restore_database">Restore a database from a cloud</string>
    <string name="title_activity_create_database">Create Database</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="set_password">Set password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="enter_password">Enter password:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="show_password">Show password</string>
    <string name="minimum_password_length">Minimum password length is 4 symbols</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="error">Error</string>
    <string name="action_gopro">Go Pro</string>
    <string name="go_pro">Go PRO!</string>
    <string name="button_go_pro">GO PRO</string>
    <string name="activity_go_pro_text">Pro trial period lasts for two weeks, then all Pro features will be disabled. Unlock the full application functionality for all your Android devices with a single in-app purchase.</string>
    <string name="item_cloud_synchronization">Cloud synchronization</string>
    <string name="item_unlimited_card_storage">Unlimited card storage</string>
    <string name="item_website_icons_for_cards">Website icons for cards</string>
    <string name="item_password_generator">Password generator</string>
    <string name="item_image_attachments">Image attachments</string>
    <string name="item_fast_unlock">Fast unlock</string>
    <string name="item_login_with_fingerprint">Login with fingerprint</string>
    <string name="item_android_wear_application">Android Wear application</string>
    <string name="item_copy_to_notification_panel">Copy to Notification panel</string>
    <string name="item_auto_fill_in_chrome">Auto-fill in Chrome</string>
    <string name="item_backup_and_restore">Backup and restore</string>
    <string name="item_empty_clipboard_by_timeout">Empty clipboard by timeout</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_save">Save</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No cards</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a pet</string>
    <string name="action_delete">Delete</string>

    <string name="editor_delete_pet_successful">Pet deleted</string>
    <string name="editor_delete_pet_failed">Error with deleting pet</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="delete">Delete</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_login">Login</string>
    <string name="edit_text_website">Website</string>
    <string name="edit_text_notes">Notes</string>
    <string name="edit_text_password">Password</string>
    <string name="action_tags">Tags</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>

    <string name="text_view_not_authenticated">Not authenticated</string>
    <string name="menu_item_all_cards">All Cards</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_web_accounts">Веб-аккаунты</string>
    <string name="menu_item_delovye">Деловые</string>
    <string name="menu_item_examples">Примеры</string>
    <string name="menu_item_private">Частные</string>
    <string name="menu_item_weak_passwords">Weak Passwords</string>
    <string name="menu_item_same_passwords">Same Passwords</string>
    <string name="menu_item_unlabeled">Unlabeled</string>
    <string name="menu_item_templates">Templates</string>
    <string name="menu_item_trash">Trash</string>
    <string name="menu_item_manage_labels">Manage labels</string>
    <string name="menu_item_settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="action_use_website_icon">Use website icon</string>
    <string name="action_select_symbol">Select symbol</string>
    <string name="action_select_color">Select color</string>
    <string name="action_use_custom_icon">Use custom icon</string>

    <string-array name="icon_images">
        <item>@drawable/ic_twitter</item>
        <item>@drawable/ic_twitter</item>
        <item>@drawable/ic_twitter</item>
        <item>@drawable/ic_twitter</item>
    </string-array>

    <string-array name="icon_codes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
