<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_cards"
            android:icon="@drawable/ic_grid_black_24dp"
            android:title="@string/menu_item_all_cards" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_item_favorites" />

        <!--Иконка tag-->
        <item
            android:id="@+id/nav_web_accounts"
            android:icon="@drawable/ic_tag_black_24dp"
            android:title="@string/menu_item_web_accounts" />
        <item
            android:id="@+id/nav_delovye"
            android:icon="@drawable/ic_tag_black_24dp"
            android:title="@string/menu_item_delovye" />
        <item
            android:id="@+id/nav_examples"
            android:icon="@drawable/ic_tag_black_24dp"
            android:title="@string/menu_item_examples" />
        <item
            android:id="@+id/nav_private"
            android:icon="@drawable/ic_tag_black_24dp"
            android:title="@string/menu_item_private" />
        <!--Иконка Восклицательный знак в кружке-->
        <item
            android:id="@+id/nav_weak_passwords"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/menu_item_weak_passwords" />
        <item
            android:id="@+id/nav_same_passwords"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/menu_item_same_passwords" />

        <item
            android:id="@+id/nav_unlabeled"
            android:icon="@drawable/ic_tag_black_off_24dp"
            android:title="@string/menu_item_unlabeled" />
        <item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_templates_black_24dp"
            android:title="@string/menu_item_templates" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/menu_item_trash" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_manage_labels"
                android:icon="@drawable/ic_create_black_24dp"
                android:title="@string/menu_item_manage_labels" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_item_settings" />
        </menu>
    </item>

</menu>
