<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_upgrade"
        android:title="@string/go_pro"
        android:icon="@drawable/ic_upgrade_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_tags"
        android:title="@string/action_tags"
        android:icon="@drawable/ic_tag_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="always" />
    <!--//TODO: Если поставить ifRoom, иконка не отображается на панели-->

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>