<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_use_website_icon"
        android:title="@string/action_use_website_icon"
        app:showAsAction="never"
        android:enabled="false"/>

    <item
        android:id="@+id/action_select_symbol"
        android:title="@string/action_select_symbol"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_color"
        android:title="@string/action_select_color"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_use_custom_icon"
        android:title="@string/action_use_custom_icon"
        app:showAsAction="never" />
</menu>