<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_go_pro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.razrabotkin.android.passwordmanager.GoProActivity">

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/main_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_go_pro_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_cloud_synchronization"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_unlimited_card_storage"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_website_icons_for_cards"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_password_generator"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_image_attachments"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_fast_unlock"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_login_with_fingerprint"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_android_wear_application"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_copy_to_notification_panel"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_auto_fill_in_chrome"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_backup_and_restore"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pro"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/item_empty_clipboard_by_timeout"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!--stateListAnimator добавлен, чтобы убрать у кнопки тень //TODO: Законспектировать-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/ripple"
        android:stateListAnimator="@null"
        android:text="@string/button_go_pro"
        android:textColor="@android:color/white"/>

</LinearLayout>
