<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:isScrollContainer="false"
    android:orientation="vertical"
    tools:context="com.razrabotkin.android.passwordmanager.PasswordActivity">

    <!--Макет со всей этой хуйнёй в центре экрана-->
    <!--<LinearLayout-->
        <!--android:layout_width="250dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--Иконка приложения-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <!--Надпись "Введите пароль"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_weight="1"
                android:backgroundTint="@color/dot_light"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:onClick="onOk"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:onClick="onShowPasswordCheckBoxClick"/>
    <!--</LinearLayout>-->

</LinearLayout>